--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.example</groupId>
+        <artifactId>meteora</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <groupId>Adilson-Claro</groupId>
     <artifactId>produtos</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -27,8 +33,6 @@
             <version>1.0.5</version>
         </dependency>
     </dependencies>
-
-
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
